<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="15dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#0542DB"
        android:layout_margin="5dp"
        app:cardCornerRadius="14dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cdTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <SurfaceView
                    android:id="@+id/surface"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:id="@+id/tvVolume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/_0"
                    android:textSize="20sp" />

                <com.tera.sliderwavy.SliderCustom
                    android:id="@+id/slVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:thumbRadius="12dp"
                    android:layout_marginBottom="40dp" />

                <!-- Кнопки -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    >

                    <ImageView
                        android:id="@+id/imSetting"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="9dp"
                        android:paddingTop="9dp"
                        android:paddingBottom="8dp"
                        android:background="@drawable/rectangle_black"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_setting_black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvExit"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@drawable/rectangle_black"
                        android:gravity="center"
                        android:text="@string/exit"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />



                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>